if (CLR_CMAKE_BUILD_LLVM_JIT)
    add_definitions(-DPAL_STDCPP_COMPAT)
    include_directories("../../pal/src/include")
    include_directories("/home/scott/github/runtimelab/artifacts/obj/coreclr/Linux.x64.Debug/pal/src")
endif(CLR_CMAKE_BUILD_LLVM_JIT)

add_subdirectory(superpmi)
add_subdirectory(mcs)
add_subdirectory(superpmi-shim-collector)
add_subdirectory(superpmi-shim-counter)
add_subdirectory(superpmi-shim-simple)
